--- a/lab14.html
+++ b/lab14.html
@@ -6,6 +6,19 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <form action="" onsubmit="return validateForm()">
+    <b>User name: <input type="text" name="uname" id="name"></b><br>
+    <b> Password : <input type="password" id="pass"></b> <br>
+    <b>Email: <input type="email" id="email" placeholder="Enter email here" required></b><br>
+    <b>Country: <select name="country" id="country">
+      <option value="Nepal">Nepal</option>
+      <option value="India">India</option>
+      <option value="China">China</option>
+    </select></b><br>
+    <button type="submit" value="submit">Submit</button>
+  </form>
+  <script src="script.js">
+   
+  </script>
 </body>
 </html>
