--- a/lab14.html
+++ b/lab14.html
@@ -9,7 +9,7 @@
   <form action="" onsubmit="return validateForm()">
     <b>User name: <input type="text" name="uname" id="name"></b><br>
     <b> Password : <input type="password" id="pass"></b> <br>
-    <b>Email: <input type="email" id="email" placeholder="Enter email here" required></b><br>
+    <b>Email: <input type="email" id="email" placeholder="Enter email here" ></b><br>
     <b>Country: <select name="country" id="country">
       <option value="Nepal">Nepal</option>
       <option value="India">India</option>
