feat(lab1): added a span

--- a/lab1.html
+++ b/lab1.html
@@ -9,6 +9,8 @@
 <body>
   <h1>About Me</h1>
   <p>Name: Anupam Aryal <br>College Name: Nepalaya College <br>Home Address: Siddhelek-4 Arubastar, Dhading </p>
+  <span> This is to check if github is working or not..</span>
+
 
 </body>
 </html>
